# iras

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: match.py  resume.py
app/core/: cache.py  config.py  session.py
app/models/: resume.py
app/services/: enrichment_service.py  extraction_service.py  pdf_service.py  scoring_service.py
web/: Dockerfile  biome.json  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: MatchPanel.tsx  ResumeCard.tsx  ResumeListItem.tsx  UploadZone.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  progress.tsx
web/src/lib/: api.ts  utils.ts
web/src/pages/: ResumePage.tsx
web/src/types/: resume.ts
