[project]
name = "iras"
version = "0.1.0"
description = "IRAS - Intelligent Resume Analysis System"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "pillow>=12.2.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.13.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "redis>=7.4.0",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = ["ruff>=0.15.10", "ty>=0.0.29"]
